vlib/v/checker/tests/option_type_call_err.out
vlib/v/checker/tests/option_type_call_err.vv:4:5: error: Result type cannot be called directly
    2 |
    3 | fn main() {
    4 |     os.ls('.').filter(it.ends_with('.v')) or { return }
      |        ~~~~~~~
    5 | }